--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+
             ],
             "scripts": []
           },
@@ -86,6 +88,7 @@
             ],
             "styles": [
               "src/styles.css"
+
             ],
             "scripts": []
           }
